charon/tests/ui/unsupported/plain-panic-str.out
thread 'rustc' panicked at 'Expected a next block after the call to core::panicking::panic_fmt.

Substs: []

Args: [Move(Place { ty: Adt { generic_args: [Lifetime(Region { kind: ReErased })], trait_refs: [], def_id: DefId { krate: "core", path: [DisambiguatedDefPathItem { data: TypeNs("fmt"), disambiguator: 0 }, DisambiguatedDefPathItem { data: TypeNs("Arguments"), disambiguator: 0 }], index: (2, 42466) } }, kind: Local(Local(4)) })]:', src/translate/translate_functions_to_ullbc.rs:1362:29
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting body.
 --> tests/ui/unsupported/plain-panic-str.rs:2:1
  |
2 | fn main() {
  | ^^^^^^^^^

error: aborting due to previous error

[ ERROR charon_driver:200] The extraction encountered 1 errors
