charon/tests/ui/unsupported/plain-panic-str.rs
//@ known-failure
fn main() {
    panic!("O no");
}
